--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-spring-boot",
+  "name": "test-java-spring",
   "version": "1.0.0",
   "description": "Spring Boot application",
   "main": "index.js",
